--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,7 @@
     <div class="container">  
         <form id="contact" action="https://formspree.io/xjvanggv" method="POST">
           <h3>Contact us</h3>
-          <h4>You can leave me message to report a bug, make suggestions, or just to say hi</h4>
+          <h4>You can leave me a message to report a bug, make suggestions, or just to say hi! :)</h4>
           <fieldset>
             <input name="name" placeholder="Your name" type="text" tabindex="1" required autofocus>
           </fieldset>
@@ -31,7 +31,7 @@
       </div>
 
 <style>
-    @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
+    @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic);
 * {
   margin: 0;
   padding: 0;
@@ -46,12 +46,12 @@
 }
 
 body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-weight: 100;
   font-size: 12px;
   line-height: 30px;
   color: #777;
-  background: #4CAF50;
+  background: #ffbb33;
 }
 
 .container {
@@ -63,30 +63,34 @@ body {
 
 #contact input[type="text"],
 #contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
 #contact textarea,
 #contact button[type="submit"] {
-  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+  font: 400 12px/16px "Open Sans", Helvetica, Arial, sans-serif;
 }
 
 #contact {
-  background: #F9F9F9;
+  background: #FFFFFF;
   padding: 25px;
   margin: 150px 0;
+  border-radius: 30px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 #contact h3 {
+  color: #333;
   display: block;
+  text-align: center;
   font-size: 30px;
-  font-weight: 300;
+  font-weight: 800;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
 #contact h4 {
-  margin: 5px 0 15px;
+  margin: 15px 0 30px;
   display: block;
+  text-align: center;
+  line-height: normal;
   font-size: 13px;
   font-weight: 400;
 }
@@ -132,11 +136,14 @@ fieldset {
   cursor: pointer;
   width: 100%;
   border: none;
-  background: #4CAF50;
-  color: #FFF;
+  background: #ffbb33;
+  border-radius: 30px;
+  color: #333;
   margin: 0 0 5px;
   padding: 10px;
-  font-size: 15px;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 800;
 }
 
 #contact button[type="submit"]:hover {
