--- a/contact-us.html
+++ b/contact-us.html
@@ -25,7 +25,7 @@
             <textarea name="message" placeholder="Type your message here...." tabindex="5" required></textarea>
           </fieldset>
           <fieldset>
-            <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+            <button type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
           </fieldset>
         </form>
       </div>
@@ -147,7 +147,7 @@ fieldset {
 }
 
 #contact button[type="submit"]:hover {
-  background: #43A047;
+  background: #ffbb33;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
