--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
   <title></title>
   <meta name="author" content="vrgz">
   <meta name="description" content="Contact us page">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.0">
 </head>
 
 <body>
