--- a/contact-us.html
+++ b/contact-us.html
@@ -31,7 +31,7 @@
       </div>
 
 <style>
-    @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic);
+    @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,800);
 * {
   margin: 0;
   padding: 0;
@@ -47,7 +47,7 @@
 
 body {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  font-weight: 100;
+  font-weight: 400;
   font-size: 12px;
   line-height: 30px;
   color: #777;
@@ -71,7 +71,7 @@ body {
 #contact {
   background: #FFFFFF;
   padding: 25px;
-  margin: 150px 0;
+  margin: 30px 0;
   border-radius: 30px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
@@ -142,7 +142,7 @@ fieldset {
   margin: 0 0 5px;
   padding: 10px;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 800;
 }
 
