--- a/privacy.html
+++ b/privacy.html
@@ -174,7 +174,7 @@
     <p><strong>Contact Us</strong></p>
     <p>
         If you have any questions or suggestions about my
-        Privacy Policy, do not hesitate to contact me at nicolasvergoz.github.io/vrgz/contact-us .
+        Privacy Policy, do not hesitate to contact me at <a href="nicolasvergoz.github.io/vrgz/contact-us" target="_blank" rel="noopener noreferrer">this page</a>.
     </p>
     <p>
         This privacy policy page was created at
