--- a/be-tester.html
+++ b/be-tester.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">  
-        <form id="tester" action="https://formspree.io/f/xvovzkyg" method="POST">
+        <form id="contact" action="https://formspree.io/f/xvovzkyg" method="POST">
           <h3>Tester app</h3>
           <h4>Formulaire d'inscription au teste de l'app mobile Per100</h4>
           <fieldset>
