--- a/be-tester.html
+++ b/be-tester.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Per100 App Tester</title>
+  <title>Tester l'app</title>
   <meta name="author" content="vrgz">
   <meta name="description" content="Tester form page">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.0">
