--- a/be-tester.html
+++ b/be-tester.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Tester l'app</title>
+  <title>Devenir testeur</title>
   <meta name="author" content="vrgz">
   <meta name="description" content="Tester form page">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.0">
@@ -13,16 +13,16 @@
 
     <div class="container">  
         <form id="contact" action="https://formspree.io/f/xvovzkyg" method="POST">
-          <h3>Tester app</h3>
-          <h4>Formulaire d'inscription au teste de l'app mobile Per100</h4>
+          <h3>Devenir testeur</h3>
+          <h4>Formulaire d'inscription</h4>
           <fieldset>
-            <input name="_replyto" placeholder="Your Email Address" type="email" tabindex="2" required autofocus>
+            <input name="_replyto" placeholder="Votre adresse email*" type="email" tabindex="2" required autofocus>
           </fieldset>
           <fieldset>
-            <input name="name" placeholder="Your name" type="text" tabindex="1">
+            <input name="name" placeholder="Votre nom" type="text" tabindex="1">
           </fieldset>
           <fieldset>
-            <button type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+            <button type="submit" id="contact-submit" data-submit="...Envoi">Envoyer</button>
           </fieldset>
         </form>
       </div>
